# normfixer

./: ft_isalnum.c  ft_isalpha.c  pyproject.toml  setup.py
norminette/: __main__.py
norminette/fixer/: declaration_assign.py  fixer.py  indentation.py  parentheses.py  whitespace.py
src/normfixer/: fixer_pipeline.py  utils.py
src/normfixer.egg-info/: PKG-INFO  SOURCES.txt
src/normfixer/core/: fixer.py
src/normfixer/fixers/: __init__.py  blank_lines.py  declarations.py  functions.py  indentation.py  operators.py  preprocessor.py  spaces.py  whitespace.py
