[project]
name = "normfixer"
version = "1.0.0"
description = "Auto-fix simple corrections for C files according to 42 Norminette style."
authors = [
  { name = "SimaLeSeul" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

[project.scripts]
normfixer = "normfixer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["normfixer*"]

