[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "normfixer"
version = "1.0.0"
description = "Auto-fix pour la norme 42"
authors = [{name = "Michael", email = "michael@example.com"}]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
normfixer = "normfixer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

